--- a/installer/resources/themes/console/midnight/console_big.css
+++ b/installer/resources/themes/console/midnight/console_big.css
@@ -1,5 +1,5 @@
-/* I2P Theme: I2P Classic & Midnight Theme Override */
-/* I2P Description: Larger fontsize override for sidepanel to accomodate foreign charactersets */
+/* I2P Theme: Midnight Theme Override */
+/* Description: Larger fontsize & styling override to accomodate foreign charactersets */
 /* Author: Dr|Z3d */
 
 
