--- a/installer/resources/themes/console/midnight/default.css
+++ b/installer/resources/themes/console/midnight/default.css
@@ -1,5 +1,5 @@
 /* I2P Theme: Midnight - I2P Tunnel Manager */
-/* I2P Description: Minimalist Midnight Blue, based on Classic theme.*/
+/* Description: Minimalist Midnight Blue, based on Classic theme.*/
 /* Author: Dr|Z3d */
 
 body {
