More "midnight" theme finessing.
Monotone-Parent: 73098928205a0096a099b2ba43e17c41d8022481
Monotone-Revision: d1762684a780fa61d199e583bd9442b1e2a2af6e

Monotone-Author: z3d@mail.i2p
Monotone-Date: 2009-11-12T19:07:05
Monotone-Branch: i2p.i2p

--- a/installer/resources/themes/console/midnight/console.css
+++ b/installer/resources/themes/console/midnight/console.css
@@ -545,7 +545,7 @@ h2 {
 
 h3 {
      font-size: 11pt;
-     padding: 5px;
+     padding: 5px 10px;
      border: 1px solid #99f;
      border-right: 1px solid #77f;
      border-bottom: 1px solid #77f;
