Some string mods and tagging and so forth; "midnight" console theme futzage.
Monotone-Parent: d6b8e99c4aee82652446fe759f45f27e0da9fbc0
Monotone-Revision: 369305db0cea95e8bd0990de7462340cac75a1f9

Monotone-Author: z3d@mail.i2p
Monotone-Date: 2009-11-17T19:55:51
Monotone-Branch: i2p.i2p

--- a/installer/resources/themes/console/midnight/console.css
+++ b/installer/resources/themes/console/midnight/console.css
@@ -535,9 +535,6 @@ h2 {
      border-top: 1px solid #99f;
      border-left: 1px solid #99f;
      background: #000008;
-     background-image: url("images/h2bg.png"); 
-     background-repeat: no-repeat; 
-     background-position: right center;
      font-variant: small-caps; 
      text-transform: capitalize; 
      letter-spacing: 0.07em;
@@ -557,6 +554,12 @@ h3 {
 
 h3 a {
      font-weight: bold !important;
+}
+
+h2, h3 {
+     background-image: url("images/h2bg.png"); 
+     background-repeat: no-repeat; 
+     background-position: right center;
 }
 
 .proxyfooter{
@@ -592,6 +595,7 @@ th {
      padding: 8px 2px;
      text-align: center;
      border-bottom: 1px solid #99f;
+     font-size: 8pt !important;
 }
 
 tt {
