* Misc. cleanups after review, prep for release
Monotone-Parent: ef1010c37be3810429094c6549a5eef2060c2c63
Monotone-Revision: 9cbd8dd53e3ccdf1b5e6b3941f19faa5a236ee43

Monotone-Author: zzz@mail.i2p
Monotone-Date: 2009-12-08T00:41:58
Monotone-Branch: i2p.i2p

--- a/installer/resources/themes/console/midnight/console.css
+++ b/installer/resources/themes/console/midnight/console.css
@@ -742,7 +742,7 @@ p {
      color: #eef;
      font-size: 7pt;
      width: 220px;
-     text-align: center;
+     text-align: right;
      float: right;
      valign: middle;
 }
