--- a/installer/resources/themes/console/classic/console.css
+++ b/installer/resources/themes/console/classic/console.css
@@ -655,7 +655,7 @@ p {
      color: #001;
      font-size: 7pt;
      width: 220px;
-     text-align: center;
+     text-align: right;
      float: right;
      valign: middle;
 }
