--- a/installer/resources/themes/console/light/console.css
+++ b/installer/resources/themes/console/light/console.css
@@ -723,8 +723,8 @@ button:active{
      padding: 5px 5px;
      color: #001;
      font-size: 7pt;
-     width: 120px;
-     text-align: center;
+     width: 220px;
+     text-align: right;
      float: right;
      valign: middle;
 }
