more last-minute tweaks
Monotone-Parent: 88e09927d5ab4de344114f265e7fd0b484859962
Monotone-Revision: 5e570d447fb8e6b4338f8571fcd5040f9b0156eb

Monotone-Author: zzz@mail.i2p
Monotone-Date: 2009-12-08T13:33:42
Monotone-Branch: i2p.i2p
Monotone-Tag: i2p-0.7.8

--- a/installer/resources/themes/console/classic/console.css
+++ b/installer/resources/themes/console/classic/console.css
@@ -655,7 +655,7 @@ p {
      color: #001;
      font-size: 7pt;
      width: 220px;
-     text-align: right;
+     text-align: center;
      float: right;
      valign: middle;
 }
