--- a/installer/resources/themes/console/midnight/console.css
+++ b/installer/resources/themes/console/midnight/console.css
@@ -742,7 +742,7 @@ p {
      color: #eef;
      font-size: 7pt;
      width: 220px;
-     text-align: right;
+     text-align: center;
      float: right;
      valign: middle;
 }
