more cleanup and tagging; remove untranslatable button images; add button css
Monotone-Parent: 7c17b785b5338b3933a6092e232437c7b14e072b
Monotone-Revision: 5271496cd64de75cb702db25cfa38beb4892fa22

Monotone-Author: zzz@mail.i2p
Monotone-Date: 2009-12-16T17:29:28
Monotone-Branch: i2p.i2p

--- a/apps/susidns/src/css.css
+++ b/apps/susidns/src/css.css
@@ -122,3 +122,31 @@ p.footer {
   line-height: 160% !important;
   -moz-box-shadow: inset 0px 0px 1px 0px #002;
 }
+
+input[type=submit] {
+     border: 1px outset #999;
+     background: #ddf;
+     color: #001;
+     margin: 5px;
+     font: bold 8pt "Lucida Sans Unicode", "Bitstream Vera Sans", Verdana, Tahoma, Helvetica, sans-serif;
+     padding: 1px 2px;
+     text-decoration: none;
+     min-width: 110px;
+     border-radius: 4px;
+     -moz-border-radius: 4px;
+     -khtml-border-radius: 4px;
+     -moz-box-shadow: inset 0px 2px 8px 0px #fff;
+     color: #006;
+     opacity: 0.9;
+}
+
+
+input[type=submit]:hover {
+     background: #22a;
+     color: #fff;
+     border: 1px solid #f60;
+     opacity: 1.0;
+     -moz-box-shadow: inset 0px 0px 0px 1px #fff;
+
+}
+
