--- a/installer/resources/themes/console/snark.css
+++ b/installer/resources/themes/console/snark.css
@@ -268,6 +268,10 @@ div.configsection {
      font-weight: bold;/* red tile needs bold text! */
 }
 
+div.configsection table{
+     color: #ffb;
+}
+
 div.configsection a {
      color: #f90;
 }
