tweaks; include new translated eepsite pages in pkg; -18-rc
Monotone-Parent: 4526c793eb8c3322ddf112781f8403ab3ee7d5bd
Monotone-Revision: 8dfddbd5818309c8db9434a91b4cfdbb1b79189b

Monotone-Author: zzz@mail.i2p
Monotone-Date: 2010-01-09T14:26:01
Monotone-Branch: i2p.i2p

--- a/installer/resources/themes/console/light/console.css
+++ b/installer/resources/themes/console/light/console.css
@@ -196,12 +196,7 @@ div.refresh {
      padding: 2px 0 0px 0 !important;
 }
 
-div.routersummary a:link, div.routersummary a:visited {
-     text-shadow: 0px 0px 1px rgba(0, 0, 32, 0.5);
-}
-
 div.routersummary a:hover {
-     text-shadow: 0px 0px 0.5px rgba(255, 255, 255, 0.7);
      color: #f60;
 }
 
@@ -470,7 +465,7 @@ table {
      cell-padding: 1px;
      font-size: 7pt;
      background: #b4c8ff url('images/tabletitlelight.png') repeat-x;
-     font: 7pt/130% "Lucida Sans Unicode", Verdana, Bitstream Vera Sans", Tahoma, Helvetica, sans-serif;
+     font: 7pt/130% "Lucida Sans Unicode", Verdana, "Bitstream Vera Sans", Tahoma, Helvetica, sans-serif;
 }
 
 table hr {
