--- a/installer/resources/eepsite.help/help/lib/eepsite.css
+++ b/installer/resources/eepsite.help/help/lib/eepsite.css
@@ -1,4 +1,4 @@
-body            { background-color:#000000; color: #ffffe0; margin-left: 8.7%; margin-right: 12.9%; margin-top: 6%; margin-bottom: 6%; text-align: justify; background-image: url(bg.png); }
+body            { background-color:#000000; color: #ffffe0; margin-left: 8%; margin-right: 8%; margin-top: 6%; margin-bottom: 6%; text-align: justify; background-image: url(bg.png); }
 
 body,h1,h2,h3,h4,p,ul,ol,li,dl,dt,dd,div,td,th,address,blockquote {font-family: "Lucida Sans Unicode", "Bitstream Vera Sans", Verdana, Tahoma, Helvetica, sans-serif; }
 
@@ -40,7 +40,7 @@ div.langbar a   { font-size: 8.5pt; outline: none;}
 div.langbar img { border: 0; padding: 4px 2px 0 2px; opacity: 0.7; }
 div.langbar img:hover { opacity: 1; }
 div.langbar img:last-child { padding-right: 0; }
-div.main        { border: 2px solid #220800; -moz-border-radius: 5px; padding: 5px 25px 20px 25px; font-size: 9.5pt; -moz-box-shadow: inset 0px 0px 1px 0px #220800; background-color: #220800; min-width: 600px; background-image: url(brown.png);}
+div.main        { border: 2px solid #220800; -moz-border-radius: 5px; padding: 5px 25px 20px 25px; font-size: 9.5pt; -moz-box-shadow: inset 0px 0px 1px 0px #220800; background-color: #220800; background-image: url(brown.png);}
 div.footnote    { font-size: 7.5pt; font-style: italic; text-align: right; }
 div.notify      { padding: 10px; border: 1px solid #994400; background-color: #440A00; -moz-border-radius: 5px; margin: 15px 0 15px 0;}
 div.fairylights { border: 1px solid #ffbb77; -moz-border-radius: 5px; padding: 1px; -moz-box-shadow: inset 0px 0px 1px 0px #ffbb77; background-color: #220800;}
