Fix the errant horizontal rule issue in the console news section (classic/midnight).
Monotone-Parent: 5c617270a9e2b6547fdf127d3756fe47aacc2ccd
Monotone-Revision: 5b892274d93516bf5632321800ef6042e50050b8

Monotone-Author: z3d@mail.i2p
Monotone-Date: 2010-04-04T05:46:07
Monotone-Branch: i2p.i2p

--- a/installer/resources/themes/console/classic/console.css
+++ b/installer/resources/themes/console/classic/console.css
@@ -384,7 +384,7 @@ div.news hr {
      background: #cc7;
      height: 1px;
      border: 0px solid #cccc77;
-     margin: 2px 0 0 0;
+     margin: 20px 0 2px 0;
 }
 
 div.confignav {
