Fix the errant horizontal rule in the console news section (classic/midnight).
Monotone-Parent: 5b892274d93516bf5632321800ef6042e50050b8
Monotone-Revision: 44418e8f7048de3ac06833176b607d55afc94bdd

Monotone-Author: z3d@mail.i2p
Monotone-Date: 2010-04-04T11:32:28
Monotone-Branch: i2p.i2p

--- a/installer/resources/themes/console/classic/console.css
+++ b/installer/resources/themes/console/classic/console.css
@@ -1,4 +1,8 @@
-/* Optimised for less capable browsers and system specifications */
+/* I2P Theme: Classic */
+/* Description: Classic theme, loosely based on duck's original */
+/* Optimized for less capable browsers and system specifications */
+/* Author: dr|z3d */
+
 
 body {
      margin: 2px 0 0 2px;
