--- a/installer/resources/themes/console/midnight/console.css
+++ b/installer/resources/themes/console/midnight/console.css
@@ -1,6 +1,6 @@
 /* I2P Theme: Midnight */
-/* Description: Minimalist Midnight Blue, based on Classic theme.*/
-/* Author: Dr|Z3d */
+/* Description: Minimalist Midnight Blue, based on Classic theme. */
+/* Author: dr|z3d */
 
 
 body {
