--- a/installer/resources/themes/console/snark.css
+++ b/installer/resources/themes/console/snark.css
@@ -185,13 +185,30 @@ input {
      font-size: 9pt;
      font-weight: bold;
      text-align: left;
-     padding: 2px;
+     padding: 2px 4px;
+     -moz-border-radius: 4px;
+     border: 1px;
+}
+
+input.r {
+     text-align: right;
 }
 
 select {
      background: #ffe;
      color: #310;
      font: 9pt "Lucida Sans Unicode","Bitstream Vera Sans",Verdana,Tahoma,Helvetica,sans-serif;
+     font-weight: bold;
+     padding: 2px 2px 2px 3px;
+     -moz-border-radius: 4px;
+}
+
+textarea {
+     background: #ffe;
+     color: #310;
+     font-weight: bold;
+     padding: 1px 4px 0px;
+     -moz-border-radius: 4px;
 }
 
 img {
