border-radius thx dr.
Monotone-Parent: e56f69a2ba13238a675db9bc5f466455ff530203
Monotone-Revision: 659234026407ae06c27ceb00f5072e49f16c900e

Monotone-Author: zzz@mail.i2p
Monotone-Date: 2010-05-16T17:11:40
Monotone-Branch: i2p.i2p

--- a/installer/resources/themes/console/snark.css
+++ b/installer/resources/themes/console/snark.css
@@ -187,6 +187,7 @@ input {
      text-align: left;
      padding: 2px 4px;
      -moz-border-radius: 4px;
+     border-radius: 4px;
      border: 1px;
 }
 
@@ -201,6 +202,7 @@ select {
      font-weight: bold;
      padding: 2px 2px 2px 3px;
      -moz-border-radius: 4px;
+     border-radius: 4px;
 }
 
 textarea {
@@ -209,6 +211,7 @@ textarea {
      font-weight: bold;
      padding: 1px 4px 0px;
      -moz-border-radius: 4px;
+     border-radius: 4px;
 }
 
 img {
