show completion status in listing
Monotone-Parent: 1641b0e1876326846e060b6f44148bd5c0866265
Monotone-Revision: 16e6b80ce276a70edd725632bb837f201ffbd258

Monotone-Author: zzz@mail.i2p
Monotone-Date: 2010-05-21T15:07:34
Monotone-Branch: i2p.i2p

--- a/installer/resources/themes/console/snark.css
+++ b/installer/resources/themes/console/snark.css
@@ -108,6 +108,15 @@ td {
      font-size: 8pt;
 }
 
+.snarkFileName {
+     min-width: 25em;
+}
+
+.thumb {
+     max-height: 64px;
+     max-width: 96px;
+}
+
 .snarkNewTorrent {
      font-size: 9pt;
 }
