snark listing icons and cleanups
Monotone-Parent: 13c351b9c26b147632b40df8c0e8d9ca7d2d4485
Monotone-Revision: 1f7fc45ac173e4511d53bd8cba212eb2282042eb

Monotone-Author: zzz@mail.i2p
Monotone-Date: 2010-05-25T13:08:34
Monotone-Branch: i2p.i2p

--- a/installer/resources/themes/console/snark.css
+++ b/installer/resources/themes/console/snark.css
@@ -110,6 +110,15 @@ td {
 
 .snarkFileName {
      min-width: 25em;
+     padding: 4px 10px;
+}
+
+.snarkFileSize {
+     padding: 4px 10px;
+}
+
+.snarkFileStatus {
+     padding: 4px 10px;
 }
 
 .thumb {
@@ -225,7 +234,8 @@ textarea {
 
 img {
      border: none;
-     margin: 5px 5px 0px 5px;
+     margin: 4px 8px 4px 4px;
+     vertical-align: middle;
      opacity: 1.0;
      line-height: 100%;
 }
