I2PSnark "faze to gray" theme: graphics and css futzing.
Monotone-Parent: fda5e506a50dcd25fd176e301c98d69b992ccd81
Monotone-Revision: 7c6c62e901e75230e3a39e578f8fcbcf4cd2dd00

Monotone-Author: z3d@mail.i2p
Monotone-Date: 2010-09-16T02:32:07
Monotone-Branch: i2p.i2p

--- a/installer/resources/themes/console/snark.css
+++ b/installer/resources/themes/console/snark.css
@@ -1,7 +1,7 @@
 /* Not yet complete. Subject to flux and change. dr|z3d - 07.25.09 */
 
 body {
-     background: #333;
+     background: #333 url('../console/images/graytile.png');
      color: #001;
      font: 8pt "Lucida Sans Unicode","Bitstream Vera Sans",Verdana,Tahoma,Helvetica,sans-serif;
 }
@@ -209,21 +209,11 @@ p {
 }
 
 hr {
-     color: #003;
-     background: #003;
-     height: 1px;
-     border: 0px solid #003;
-     width: 100%;
-     margin: 10px 0 7px 0;
-     text-align: center;
-}
-
-hr {
      color: #444;
      background: #444;
      height: 1px;
      border: 0px solid #444;
-     width: 100%;
+     width: 0%;
      margin: 5px 0 7px 0;
      text-align: center;
 }
@@ -277,7 +267,8 @@ input[type=submit]:hover {
 
 input[type=submit]:active {
      background: #000 !important;
-	 color: #777;
+	 color: #f60 !important;
+	 text-shadow: 0 !important;
 }
 
 input[type=text]:active, input[type=text]:hover, input.r:hover {
