I2PSnark css edits: log text visibility.
Monotone-Parent: baeaa38fd2fc1a52bbebce911cf37410b343f02e
Monotone-Revision: 95a3e82efc177d2426793f867818721baf79dca1

Monotone-Author: z3d@mail.i2p
Monotone-Date: 2010-09-16T16:49:27
Monotone-Branch: i2p.i2p

--- a/installer/resources/themes/console/snark.css
+++ b/installer/resources/themes/console/snark.css
@@ -1,4 +1,4 @@
-/* Not yet complete. Subject to flux and change. dr|z3d - 07.25.09 */
+/* I2PSnark theme "faze to gray" by dr|z3d */
 
 body {
      background: #333 url('../console/images/graytile.png');
@@ -79,7 +79,8 @@ pre {
      padding: 0;
      text-align: left !important;
      height: 8px;
-	 color: #050;
+	 color: #070;
+     font-weight: bold !important; 
 }
 
 table {
