Can't remember what. css stuff.
Monotone-Parent: a5ca324ffa3ed449b1790e32151c6f5a16508e60
Monotone-Revision: 5de5154cb49a458dce4182ceebf43abdd6b81693

Monotone-Author: z3d@mail.i2p
Monotone-Date: 2010-09-16T23:33:24
Monotone-Branch: i2p.i2p

--- a/installer/resources/themes/console/snark.css
+++ b/installer/resources/themes/console/snark.css
@@ -1,4 +1,5 @@
 /* I2PSnark theme "faze to gray" by dr|z3d */
+/* Guantanamo Commemorative Edition. */
 
 body {
      background: #333 url('../console/images/graytile.png');
